Added new variables.

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,15 @@ EMAIL_PORT=int
 EMAIL_HOST_USER='email@service.domen'
 EMAIL_HOST_PASSWORD='password'
 EMAIL_USE_SSL=Bool
+
+# CACHE
+CACHE_ENABLED=Bool
+CACHES_BACKEND="path"
+CACHES_LOCATION="url"
+CACHES_TIMEOUT=int
+
+# CELERY
+CELERY_BROKER_URL='url'
+CELERY_RESULT_BACKEND='url'
+CELERY_TIMEZONE='some_timezone'
+CELERY_TASK_TRACK_STARTED=bool
